--- a/source/index.html
+++ b/source/index.html
@@ -1,13 +1,130 @@
 <!DOCTYPE html>
 <html class="page" lang="ru">
-  <head>
-    <meta charset="UTF-8">
-    <title>Название проекта</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <link rel="stylesheet" href="styles/styles.css">
-    <script src="scripts/index.js" defer></script>
-  </head>
-  <body class="page__body">
-    <header class="header">Hello</header>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <title>Cat Energy Pro</title>
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="stylesheet" href="styles/styles.css">
+  <script src="scripts/index.js" defer></script>
+</head>
+
+<body class="page-body">
+  <header class="page-body__page-header page-header">
+    <h1 class="visually-hidden">Самый популярный кошачий корм Cat Energy Pro</h1>
+    <a class="page-header__logo logo" href="#" aria-label="Логотип Cat Energy">
+      <img class="logo__image" src="#" alt="Логотип Cat Energy" width="190" height="38">
+    </a>
+    <button class="page-header__button" type="button" aria-label="Открыть меню">Меню
+      <span class="visually-hidden">Меню</span>
+    </button>
+    <nav class="page-header__navigation navigation">
+      <ul class="navigation__list">
+        <li class="navigation__item">
+          <a class="navigation__link" href="index.html" aria-label="Главная">Главная</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="catalog.html" aria-label="Каталог">Каталог продукции</a>
+        </li>
+        <li class="navigation__item">
+          <a class="navigation__link" href="form.html" aria-label="Подбор программы">Подбор программы</a>
+        </li>
+      </ul>
+    </nav>
+    <section class="page-header__hero hero">
+      <h2 class="visually-hidden">Cat Energy Pro Курица</h2>
+      <p class="hero__heading">Функциональное питание для котов</p>
+      <p class="hero__description">Занялся собой? Займись котом!</p>
+      <img class="hero__image" src="#" alt="Фотография Cat Energy Pro Курица" width="280" height="270">
+      <a class="hero__button button" href="#" aria-label="Подобрать программу">Подобрать программу</a>
+    </section>
+  </header>
+  <main class="page-body__page-main page-main">
+    <section class="page-main__programs programs">
+      <h2 class="visually-hidden">Наши программы</h2>
+      <ul class="programs__list">
+        <li class="programs__item">
+          <img class="programs__image" src="#" alt="Логотип программы похудения" width="67" height="50">
+          <h3 class="programs__title">Похудение</h3>
+          <p class="programs__text">Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на
+            диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.</p>
+          <a class="programs__link" href="#" aria-label="Каталог slim">Каталог slim</a>
+        </li>
+        <li class="programs__item">
+          <img class="programs__image" src="#" alt="Логотип программы набора массы" width="50" height="53">
+          <h3 class="programs__title">Набор массы</h3>
+          <p class="programs__text">Заработать авторитет среди дворовых котов и даже собак? Серия Cat Energy Pro поможет
+            вашему коту нарастить необходимые мышцы!</p>
+          <a class="programs__link" href="#" aria-label="Каталог pro">Каталог pro</a>
+        </li>
+      </ul>
+    </section>
+    <section class="page-main__functional functional">
+      <h2 class="visually-hidden">Как работает Cat Energy Pro</h2>
+      <p class="functional__heading">Как это работает</p>
+      <ol class="functional__list">
+        <li class="functional__item">
+          <img class="functional__image" src="#" alt="Логотип ..." width="60" height="60">
+          <h3 class="functional__text">Функциональное питание содержит только полезные питательные вещества.</h3>
+        </li>
+        <li class="functional__item">
+          <img class="functional__image" src="#" alt="Логотип ..." width="60" height="60">
+          <h3 class="functional__text">Выпускается в виде порошка, который нужно лишь залить кипятком и готово.</h3>
+        </li>
+        <li class="functional__item">
+          <img class="functional__image" src="#" alt="Логотип ..." width="60" height="60">
+          <h3 class="functional__text">Замените один-два приема обычной еды на наше функциональное питание.</h3>
+        </li>
+        <li class="functional__item">
+          <img class="functional__image" src="#" alt="Логотип ..." width="60" height="60">
+          <h3 class="functional__text">Уже через месяц наслаждайтесь изменениями к лучшему вашего питомца!</h3>
+        </li>
+      </ol>
+    </section>
+    <section class="page-main__example example">
+      <h2 class="example__heading">Живой пример</h2>
+      <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim.
+        Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов
+        в день.</p>
+      <dl class="example__list">
+        <dt class="example__term">5 кг</dt>
+        <dd class="example__definition">за 2 месяца</dd>
+        <dt class="example__term">60 дней</dt>
+        <dd class="example__definition">затрачено времени</dd>
+      </dl>
+      <div class="example__slider slider">
+        <img class="slider__image" src="#" alt="Кот Борис до" width="280" height="256">
+        <img class="slider__image" src="#" alt="Кот Борис после" width="280" height="256">
+        <div class="slider__control"></div>
+      </div>
+    </section>
+    <section class="page-main__invite invite">
+      <h2 class="visually-hidden">Наш адрес в Санкт-Петербурге</h2>
+      <p class="invite__heading">Приглашаем к сотрудничеству дилеров!</p>
+      <h3 class="invite__text">ул. Б. Конюшенная, д. 19/8 Санкт-Петербург</h3>
+      <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe>
+    </section>
+  </main>
+  <footer class="page-body__page-footer page-footer">
+    <a class="page-footer__logo logo" href="#" aria-label="Логотип Cat Energy">
+      <img class="logo__image" src="#" alt="Логотип Cat Energy" width="128" height="24">
+    </a>-
+    <ul class="page-footer__social social">
+      <li class="social__item">
+        <a class="social__link" href="#" aria-label="VK">VK</a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="#" aria-label="YouTube">YouTube</a>
+      </li>
+      <li class="social__item">
+        <a class="social__link" href="#" aria-label="Telegram">Telegram</a>
+      </li>
+    </ul>
+    <a class="page-footer__htmlacademy htmlacademy" href="#" aria-label="HTML Academy">
+      <p class="htmlacademy__text">HTML Academy</p>
+      <img class="htmlacademy__image" src="#" alt="Логотип HTML Academy" width="27" height="34">
+    </a>
+  </footer>
+</body>
+
 </html>
