--- a/source/form.html
+++ b/source/form.html
@@ -6,6 +6,7 @@
   <title>Cat Energy Pro</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <!-- favicon -->
+  <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicons/favicon-16x16.png">
@@ -19,14 +20,23 @@
 <body class="page-html__page-body page-body">
   <header class="page-body__page-header page-header">
     <h1 class="visually-hidden">Самый популярный кошачий корм Cat Energy Pro</h1>
-    <a class="page-header__logo logo" href="#" aria-label="Логотип Cat Energy">
-      <img class="logo__image" src="#" alt="Логотип Cat Energy" width="190" height="38">
-    </a>
-    <button class="page-header__button" type="button" aria-label="Открыть меню">Меню
-      <span class="visually-hidden">Меню</span>
-    </button>
-    <nav class="page-header__navigation navigation">
-      <ul class="navigation__list">
+    <div class="page-header__wrapper">
+      <a class="page-header__logo page-logo" href="index.html" aria-label="Логотип Cat Energy">
+        <picture>
+          <source media="(min-width: 1440px)" srcset="images/logo/page-logo-desktop.svg" width="202" height="59"
+            type="image/svg+xml">
+          <source media="(min-width: 768px)" srcset="images/logo/page-logo-tablet.svg" width="174" height="50"
+            type="image/svg+xml">
+          <img class="page-logo__image" src="images/logo/page-logo-mobile.svg" alt="Логотип Cat Energy" width="190"
+            height="38">
+        </picture>
+      </a>
+      <button class="page-header__button" type="button" aria-label="Открыть меню"></button>
+    </div>
+    <nav class="page-header__navigation navigation ">
+      <!-- no-js защита работы без JS -->
+      <!-- closed закрытое меню -->
+      <ul class="navigation__list navigation__list--closed navigation__list--no-js">
         <li class="navigation__item">
           <a class="navigation__link" href="index.html" aria-label="Главная">Главная</a>
         </li>
@@ -41,116 +51,130 @@
   </header>
   <main class="page-body__page-main page-main">
     <h2 class="page-main__heading">Подбор программы</h2>
-    <p class="page-main__description">Заполните анкету и мы подберем программу питания для вашего кота</p>
+    <p class="page-main__description">Заполните анкету, и мы подберем программу питания для вашего кота</p>
     <form class="page-main__form form" action="https://echo.htmlacademy.ru/" method="post">
       <fieldset class="form__group group">
-        <legend class="group__name">Кот</legend>
-        <label class="group__control control" for="cat-name">Имя:*
+        <legend class="group__name visually-hidden">Кот</legend>
+        <label class="group__control control" for="cat-name">
+          <span class="control__name">Имя:*</span>
           <input class="control__input control__input--text" type="text" name="cat-name" id="cat-name"
-            placeholder="Барсик" aria-label="Имя кота">
+            placeholder="Барсик" aria-label="Имя кота" required>
         </label>
-        <label class="group__control control" for="cat-weight">Вес (кг):*
-          <input class="control__input control__input--text" type="number" name="cat-weight" id="cat-weight"
-            placeholder="7" aria-label="Вес кота">
+        <label class="group__control control" for="cat-weight">
+          <span class="control__name">Вес (кг):*</span>
+          <input class="control__input control__input--text control__input--number" type="number" name="cat-weight"
+            id="cat-weight" placeholder="7" aria-label="Вес кота" required min="0">
         </label>
-        <label class="group__control control" for="cat-age">Возраст (лет):
-          <input class="control__input control__input--text" type="number" name="cat-age" id="cat-age" placeholder="7"
-            aria-label="Возраст кота">
+        <label class="group__control control" for="cat-age">
+          <span class="control__name">Возраст (лет):</span>
+          <input class="control__input control__input--text control__input--number" type="number" name="cat-age"
+            id="cat-age" placeholder="7" aria-label="Возраст кота" min="0">
         </label>
       </fieldset>
 
-      <fieldset class="form__group group">
-        <legend class="group__name">Подобрать программу</legend>
+      <fieldset class="form__group group group--program">
+        <legend class="group__name visually-hidden">Подобрать программу</legend>
         <label class="group__control control" for="slim">
-          <input class="control__input control__input--radio" type="radio" name="program" id="slim" value="slim" checked
-            aria-label="Похудение">
-          Похудение
+          <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="slim"
+            value="slim" checked aria-label="Похудение">
+          <span class="control__mark control__mark--radio"></span>
+          <span class="control__name control__name--radio">Похудение</span>
         </label>
         <label class="group__control control" for="pro">
-          <input class="control__input control__input--radio" type="radio" name="program" id="pro" value="pro"
-            aria-label="Набор массы">
-          Набор массы
+          <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="pro"
+            value="pro" aria-label="Набор массы">
+          <span class="control__mark control__mark--radio"></span>
+          <span class="control__name control__name--radio">Набор массы</span>
         </label>
         <label class="group__control control" for="help">
-          <input class="control__input control__input--radio" type="radio" name="program" id="help" value="help"
-            aria-label="Не знаю (Нужен ваш совет)">
-          Не знаю (Нужен ваш совет)
+          <input class="visually-hidden control__input control__input--radio" type="radio" name="cat-program" id="help"
+            value="help" aria-label="Не знаю (Нужен ваш совет)">
+          <span class="control__mark control__mark--radio"></span>
+          <span class="control__name control__name--radio">Не знаю (Нужен ваш совет)</span>
         </label>
       </fieldset>
-
-      <fieldset class="form__group group">
-        <legend class="group__name">Контактные данные (владельца кота)</legend>
-        <label class="group__control control" for="owner-email">E-mail:*
-          <input class="control__input control__input--text control__input--email" type="email" name="owner-email"
-            id="owner-email" placeholder="kuklachev@gmail.com" aria-label="E-mail">
+      <fieldset class="form__group group group--contacts">
+        <legend class="group__name visually-hidden">Контактные данные (владельца кота)</legend>
+        <span class="group__title">Контактные данные (владельца кота)</span>
+        <label class="group__control control" for="owner-email">
+          <span class="control__name">E-mail:*</span>
+          <input class="control__input control__input--text" type="email" name="email" id="owner-email"
+            placeholder="kuklachev@gmail.com" aria-label="E-mail" required>
         </label>
-        <label class="group__control control" for="owner-phone">Телефон:*
+        <label class="group__control control" for="owner-phone">
+          <span class="control__name">Телефон:*</span>
           <input class="control__input control__input--text control__input--phone" type="tel" name="owner-phone"
-            id="owner-phone" placeholder="8 (960) 900-60-90" aria-label="Телефон">
+            id="owner-phone" placeholder="8 (960) 900-60-90" aria-label="Телефон" required>
         </label>
       </fieldset>
 
-      <fieldset class="form__group group">
-        <legend class="group__name">Комментарий</legend>
-        <textarea class="group__control control control--comment" name="comment" id="comment"
-          placeholder="Расскажите обо всех повадках кота" aria-label="Комментарий"></textarea>
+      <fieldset class="form__group group group--comment">
+        <legend class="group__name visually-hidden">Комментарий</legend>
+        <span class="group__title">Комментарий</span>
+        <textarea class="group__control control control--comment" name="comment" id="owner-comment"
+          placeholder="Расскажите обо всех повадках кота" aria-label="Комментарий" rows="6"></textarea>
       </fieldset>
 
-      <fieldset class="form__group group">
-        <legend class="group__name">Дополнительные опции</legend>
+      <fieldset class="form__group group group--additionally">
+        <legend class="group__name visually-hidden">Дополнительно</legend>
+        <span class="group__title">Дополнительно</span>
         <label class="group__control control" for="sweetener">
-          <input class="control__input control__input--checkbox" type="checkbox" name="sweetener" id="sweetener"
-            value="yes" checked aria-label="Cахарозаменитель">
-          Cахарозаменитель
+          <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="sweetener"
+            id="sweetener" value="yes" checked aria-label="Cахарозаменитель">
+          <span class="control__mark control__mark--checkbox"></span>
+          <span class="control__name control__name--checkbox">Cахарозаменитель</span>
         </label>
         <label class="group__control control" for="water">
-          <input class="control__input control__input--checkbox" type="checkbox" name="water" id="water" value="yes"
-            aria-label="Питьевая вода">
-          Питьевая вода
+          <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="water" id="water"
+            value="yes" aria-label="Питьевая вода">
+          <span class="control__mark control__mark--checkbox"></span>
+          <span class="control__name control__name--checkbox">Питьевая вода</span>
         </label>
         <label class="group__control control" for="milk">
-          <input class="control__input control__input--checkbox" type="checkbox" name="milk" id="milk" value="yes"
-            aria-label="Молоко">
-          Молоко
+          <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="milk" id="milk"
+            value="yes" aria-label="Молоко">
+          <span class="control__mark control__mark--checkbox"></span>
+          <span class="control__name control__name--checkbox">Молоко</span>
         </label>
         <label class="group__control control" for="vitamins">
-          <input class="control__input control__input--checkbox" type="checkbox" name="vitamins" id="vitamins"
-            value="yes" aria-label="Витамины">
-          Витамины
+          <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="vitamins"
+            id="vitamins" value="yes" aria-label="Витамины">
+          <span class="control__mark control__mark--checkbox"></span>
+          <span class="control__name control__name--checkbox">Витамины</span>
         </label>
       </fieldset>
 
-      <button class="form__button button" type="submit" aria-label="Отправить заявку">Отправить заявку
-        <span class="visually-hidden">Отправить заявку</span>
-      </button>
-      <p class="form__text">*Поля обязательные для заполнения</p>
-
+      <button class="form__button button" type="submit" aria-label="Отправить заявку">Отправить заявку</button>
+      <p class="form__text">* - Обязательные поля</p>
     </form>
-    <section class="page-main__invite invite">
+    <section class="page-main__invite invite invite--second">
       <h2 class="visually-hidden">Наш адрес в Санкт-Петербурге</h2>
-      <p class="invite__heading">Приглашаем к сотрудничеству дилеров!</p>
-      <h3 class="invite__text">ул. Б. Конюшенная, д. 19/8 Санкт-Петербург</h3>
+      <div class="invite__wrapper">
+        <p class="invite__heading">Приглашаем<br>к сотрудничеству<br>дилеров!</p>
+        <h3 class="invite__text">ул. Большая<br>Конюшенная, д. 19/8<br>Санкт-Петербург</h3>
+      </div>
       <iframe class="invite__map map" src="https://yandex.ru/map-widget/v1/-/CDRPbIpb"></iframe>
     </section>
   </main>
   <footer class="page-body__page-footer page-footer">
     <a class="page-footer__logo logo" href="#" aria-label="Логотип Cat Energy">
-      <img class="logo__image" src="#" alt="Логотип Cat Energy" width="128" height="24">
-    </a>-
+      <img class="logo__image" src="images/logo/footer-logo.svg" alt="Логотип Cat Energy" width="128" height="24">
+    </a>
     <ul class="page-footer__social social">
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="VK">VK</a>
+        <a class="social__link" href="#" aria-label="VK"></a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="YouTube">YouTube</a>
+        <a class="social__link" href="#" aria-label="YouTube"></a>
       </li>
       <li class="social__item">
-        <a class="social__link" href="#" aria-label="Telegram">Telegram</a>
+        <a class="social__link" href="#" aria-label="Telegram"></a>
       </li>
     </ul>
     <a class="page-footer__htmlacademy htmlacademy" href="#" aria-label="HTML Academy">
       <p class="htmlacademy__text">HTML Academy</p>
-      <img class="htmlacademy__image" src="#" alt="Логотип HTML Academy" width="27" height="34">
+      <img class="htmlacademy__image" src="images/logo/html-academy.svg" alt="Логотип HTML Academy" width="27"
+        height="34">
     </a>
   </footer>
 </body>
