--- a/source/form.html
+++ b/source/form.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <title>Cat Energy Pro</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- preloader -->
+  <link rel="preload" href="styles/styles.css" as="style" crossorigin="anonymous">
+  <link rel="preload" href="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor" as="script" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/Oswald-Regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/Lato-Regular.woff2" as="font" crossorigin="anonymous">
   <!-- favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
