--- a/source/index.html
+++ b/source/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8">
   <title>Cat Energy Pro</title>
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <!-- preloader -->
+  <link rel="preload" href="styles/styles.css" as="style" crossorigin="anonymous">
+  <link rel="preload" href="https://yandex.ru/map-widget/v1/?um=constructor%3A7ec1721b10638175297fe8957aca91636dc435452fa67788eafcaea6af0fbddc&amp;source=constructor" as="script" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/Oswald-Regular.woff2" as="font" crossorigin="anonymous">
+  <link rel="preload" href="fonts/oswald/Lato-Regular.woff2" as="font" crossorigin="anonymous">
   <!-- favicon -->
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
   <link rel="apple-touch-icon" sizes="180x180" href="favicons/apple-touch-icon.png">
@@ -35,6 +40,8 @@
         aria-label="Меню"></button>
     </div>
     <nav class="page-header__navigation navigation navigation--auxiliary">
+      <!-- no-js защита работы без JS -->
+      <!-- closed закрытое меню -->
       <ul class="navigation__list navigation__list--auxiliary navigation__list--closed navigation__list--no-js">
         <li class="navigation__item">
           <a class="navigation__link navigation__link--current" href="index.html" aria-label="Главная.">Главная</a>
