--- a/source/form.html
+++ b/source/form.html
@@ -127,25 +127,25 @@
       <fieldset class="form__group group group--additionally">
         <legend class="group__name visually-hidden">Дополнительно</legend>
         <span class="group__title group__title--additionally">Дополнительно</span>
-        <label class="group__control control control-additionally" for="sweetener">
+        <label class="group__control control control--additionally" for="sweetener">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="sweetener"
             id="sweetener" value="yes" checked aria-label="Добавить сахарозаменитель.">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Сахарозаменитель</span>
         </label>
-        <label class="group__control control control-additionally" for="water">
+        <label class="group__control control control--additionally" for="water">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="water" id="water"
             value="yes" aria-label="Добавить питьевую воду.">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Питьевая вода</span>
         </label>
-        <label class="group__control control control-additionally" for="milk">
+        <label class="group__control control control--additionally" for="milk">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="milk" id="milk"
             value="yes" aria-label="Добавить молоко.">
           <span class="control__mark control__mark--checkbox"></span>
           <span class="control__name control__name--checkbox">Молоко</span>
         </label>
-        <label class="group__control control control-additionally" for="vitamins">
+        <label class="group__control control control--additionally" for="vitamins">
           <input class="visually-hidden control__input control__input--checkbox" type="checkbox" name="vitamins"
             id="vitamins" value="yes" aria-label="Добавить витамины.">
           <span class="control__mark control__mark--checkbox"></span>
